--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "gulp-concat-css": "^2.3.0",
     "gulp-less": "^3.3.2",
     "gulp-pug": "^3.3.0",
     "gulp-server-livereload": "^1.9.2",
