--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,9 @@
   },
   "rules": {
     "angular/file-name": 0,
+    "angular/controller-as": 0,
+    "angular/document-service": 0,
+    "angular/controller-name" : 0,
     "angular/function-type": 0,
     "angular/no-service-method": 0,
     "no-const-assign": "error",
